August 14, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfxvideo/draw.c: Fixed hq2x/hq3x under Windows.
 * plugins/dfxvideo/hq2x.h: Likewise.
 * plugins/dfxvideo/hq3x.h: Likewise.
 * win32/plugins/dfxvideo/draw.c: Likewise.

August 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfxvideo/cfg.h: Readded Windows support.
 * plugins/dfxvideo/externals.h: Likewise.
 * plugins/dfxvideo/gpu.c: Likewise.
 * plugins/dfxvideo/interp.h: Likewise.
 * plugins/dfxvideo/menu.c: Likewise.
 * plugins/dfxvideo/prim.c: Likewise.
 * plugins/dfxvideo/soft.c: Likewise.
 * plugins/dfxvideo/zn.c: Likewise.
 * win32/plugins/dfxvideo: Added.
 * win32/gui/plugin.c: Disable the menu item of savestate slots
   which cannot be loaded from.
 * win32/gui/Win32.h: Likewise.
 * win32/gui/WndMain.c: Likewise.
 * win32/plugins/dfsound/winsrc/cfg.c: Changed registry entry.
 * plugins/dfsound/stdafx.h: Silenced MSVC warning.
 * win32/plugins/dfsound/winsrc/dsound.h: Added free dxsdk header from wine.
 * win32/plugins/dfsound/DFSound.dsp: Added dsound.h.

August 12, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/cfg.h: Readded Windows support.
 * plugins/dfsound/dsoundoss.h: Likewise.
 * plugins/dfsound/externals.h: Likewise.
 * plugins/dfsound/freeze.c: Likewise.
 * plugins/dfsound/spu.c: Likewise.
 * plugins/dfsound/stdafx.h: Likewise.
 * plugins/dfsound/xa.c: Likewise.
 * win32/plugins/dfsound: Added.
 * data/pcsx.glade2: Increased number of savestate slots.
 * gui/Gtk2Gui.c: Likewise.
 * gui/LnxMain.c: Likewise.
 * gui/Plugin.c: Likewise.
 * win32/gui/plugin.c: Likewise.
 * win32/gui/WndMain.c: Likewise.
 * win32/resource.h: Likewise.
 * po/pcsx.pot, po/*.po: Updated.

August 8, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfcdrom/cdr.c: Fixed thread deadlock in some cases.
 * plugins/dfcdrom/cdr.h: Likewise.
 * macosx/plugins/DFCdrom/macsrc/cdr-macosx.c: Likewise.
 * plugins/dfnet/cfg.c: Silenced warning.
