@@ -34,6 +34,7 @@ extern int ConfPlug;
 extern int CancelQuit;
 extern char cfgfile[256];
 extern int Running;
+extern boolean UseGui;
 extern char PcsxDir[256];
 
 void strcatz(char *dst, char *src);
